[#6] SpotBugs актуализирован